[FINNA-552] Fix main navbar wrapping. (#2608)

--- a/themes/finna2/less/finna/navigation.less
+++ b/themes/finna2/less/finna/navigation.less
@@ -276,7 +276,7 @@
   .finna-navbar {
     display: flex;
     .navbar-collapse {
-      flex: 1;
+      flex: 1 1 100%;
       display: flex !important; // Needed to override bootstrap defaults
     }
   }
